--- a/client/css/style.css
+++ b/client/css/style.css
@@ -128,6 +128,10 @@ h1, h2 {
   animation-name: bounceInDown;
 }
 
+.commentsInput {
+  color: black;
+}
+
 .likeWindow:before {
     content: '';
     display: inline-block;
