--- a/client/css/style.css
+++ b/client/css/style.css
@@ -19,7 +19,10 @@ h1, h2 {
   z-index: 100;
   text-shadow: 2px 2px 0px #000;
 }
-
+.totLike{
+  font-size: 20px;
+  color:white;
+}
 .menu {
   /*position: relative;*/
   z-index: 200;
