--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -57,12 +57,52 @@ h1, h2 {
   top: 45%;
 }
 
-.player-controls {
+/* .player-controls {
   height: 20px;
   background: hsla(0, 0%, 0%, 0.5);
   position: relative;
   padding: 15px;
   padding-left: 10px;
+} */
+
+.timeline-slider {
+  height: 20px;
+  background: hsla(0, 0%, 0%, 0.5);
+  position: relative;
+  padding: 15px;
+  padding-left: 10px;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
 }
 
 #playHead {
