--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+html,
+body,
+html * {
+  font-family: Roboto, sans-serif !important;
+  font-weight: 300;
+}
+
 body {
   background: #555;
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  font-family: 'Roboto';
 }
 
 .loading-channels {
@@ -33,14 +41,6 @@ body {
   display: inline-block;
   top: 45%;
 }
-
-/* .player-controls {
-  height: 20px;
-  background: hsla(0, 0%, 0%, 0.5);
-  position: relative;
-  padding: 15px;
-  padding-left: 10px;
-} */
 
 .timeline-slider {
   height: 20px;
